--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.10",
     "merge-graphql-schemas": "^1.5.2",
     "mongoose": "^5.2.1",
+    "mongoose-unique-validator": "^2.0.1",
     "subscriptions-transport-ws": "^0.9.12"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "babel-jest": "^23.2.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "eslint": "^5.2.0",
     "jest": "^23.3.0",
     "nodemon": "^1.17.5",
     "prettier": "^1.13.7",
