--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^5.2.0",
+    "eslint-config-equimper": "^2.2.2",
+    "eslint-config-prettier": "^2.9.0",
     "jest": "^23.3.0",
     "nodemon": "^1.17.5",
     "prettier": "^1.13.7",
