--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "server-graphql-template",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
@@ -25,7 +25,9 @@
     "lodash": "^4.17.10",
     "merge-graphql-schemas": "^1.5.2",
     "mongoose": "^5.2.1",
-    "subscriptions-transport-ws": "^0.9.12"
+    "mongoose-unique-validator": "^2.0.1",
+    "subscriptions-transport-ws": "^0.9.12",
+    "uuid4": "^1.0.0"
   },
   "devDependencies": {
     "axios": "^0.18.0",
@@ -33,9 +35,11 @@
     "babel-jest": "^23.2.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "eslint": "^5.0.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.0.0",
     "eslint-config-equimper": "^2.2.2",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.13.0",
     "jest": "^23.3.0",
     "nodemon": "^1.17.5",
     "prettier": "^1.13.7",
